--- a/docs/decision_language/master07-service_interface.adoc
+++ b/docs/decision_language/master07-service_interface.adoc
@@ -1,4 +1,4 @@
-= Service Model
+= DLM Service Model
 
 The following shows an outline idea of a DLM service interface. This could be made to cater for talking to a DMN service. It could also incorporate the CDS-hooks idea, which is just a recommendation structure.
 
