--- a/docs/decision_language/master10-dlom.adoc
+++ b/docs/decision_language/master10-dlom.adoc
@@ -28,9 +28,8 @@ TBD: to be continued.
 
 === Class Descriptions
 
-include::{uml_export_dir}/classes/module.adoc[leveloffset=+1]
-include::{uml_export_dir}/classes/dl_module.adoc[leveloffset=+1]]
-include::{uml_export_dir}/classes/dl_model_ref.adoc[leveloffset=+1]
+include::{uml_export_dir}/classes/module_feature.adoc[leveloffset=+1]
+include::{uml_export_dir}/classes/decision_module.adoc[leveloffset=+1]]
 include::{uml_export_dir}/classes/dl_condition_def.adoc[leveloffset=+1]
 
 == DL Rules Package
