--- a/docs/task_planning/master06-2-definition_plan.adoc
+++ b/docs/task_planning/master06-2-definition_plan.adoc
@@ -46,7 +46,7 @@ The second attribute, `_repeat_spec_` of type `TASK_REPEAT` enables a Task or Gr
 
 Repeat behaviour is specified in terms of the attributes `_repeats_`, `_period_` and `_terminate_condition_`. The first indicates the minimum and maximum number of repeats that may occur. The optional `_period_` attribute defines the period of repetition. If the latter is not defined, each repetition commences according to the application of Task availability rules already defined on the individual Tasks and/or Groups. If defined, the period should be greater than the duration of a single iteration. At execution time, a new iteration can only begin after completion of the previous one.
 
-If `_terminate_condition_` is set, it is used _prior_ to each repeat iteration. It takes precedence over the `_repeats_` attribute, i.e. if the terminate condition is true, no further repeats occur, even if the total number of repeats so far is less than the lower bound specified in `_repeats_`.
+If `_terminate_condition_` is set, it is used _post_ each repeat iteration. It takes precedence over the `_repeats_` attribute, i.e. if the terminate condition is true, no further repeats occur, even if the total number of repeats so far is less than the lower bound specified in `_repeats_`.
 
 ==== Other Attributes
 
