--- a/docs/task_planning/master06-2-definition_plan.adoc
+++ b/docs/task_planning/master06-2-definition_plan.adoc
@@ -42,11 +42,11 @@ The `PLAN_ITEM` class is the parent of all fine-grained elements of a Task Plan,
 
 ==== Repetition
 
-The second attribute, `_repeat_spec_` of type `TASK_REPEAT` enables a Task or Group to be marked as repeating. This is not primarily intended to replace the use of individual Task instances over time, such as repeated medication administrations, but rather to be used to indicate if larger sections (i.e. Task Groups) of planned Tasks are repeatable. Where repeats are specified, they will be unrolled into literal copies in the materialised expression of the Plan.
+The second attribute, `_repeat_spec_` of type `TASK_REPEAT` enables a Task or Group to be marked as repeating. This is not intended to replace the use of individual Task instances over time, such as repeated medication administrations, but rather to be used to indicate if larger sections (i.e. Task Groups) of planned Tasks are repeatable. Where repeats are specified, they will be unrolled into literal copies in the materialised expression of the Plan.
 
-Repeat behaviour is specified in terms of the attributes `_repeats_`, `_period_` and `_terminate_condition_`. The first indicates the minimum and maximum number of repeats that may occur. The optional `_period_` attribute defines the period of repetition. If the latter is not defined, each repetition commences according to the application of Task availability rules already defined on the individual Tasks and/or Groups. If defined, the period should be greater than the duration of a single iteration. At execution time, a new iteration can only begin after completion of the previous one.
+Repeat behaviour is specified in terms of the attributes `_repeats_`, `_terminate_condition_` and `_period_`. The first indicates the minimum and maximum number of repeats that may occur. Repetition occurs until the minimum number of repeats (i.e. `_repeats.lower_`) is reached. Following that, if `_terminate_condition_` is set, it is evaluated _prior_ to each further potential iteration. Repetition will cease when `_terminate_condition_` becomes True or else when `_repeats.upper_` is reached (assuming no plan abandonment or other exceptions).
 
-If `_terminate_condition_` is set, it is used _post_ each repeat iteration. It takes precedence over the `_repeats_` attribute, i.e. if the terminate condition is true, no further repeats occur, even if the total number of repeats so far is less than the lower bound specified in `_repeats_`.
+The optional `_period_` attribute defines the period of repetition. If the latter is not defined, each repetition commences according to the application of Task availability rules already defined on the individual Tasks and/or Groups; this will typically lead to each repeat executing as soon as the preceding one has completed. If set, the `_period_` will have the effect of spacing iterations out over time. Its value should be greater than the duration of a single iteration, since at execution time, a new iteration can only begin after completion of the previous one.
 
 ==== Other Attributes
 
