Initial changes for SPECPROC-33 - support progressive data-set creation.

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -107,9 +107,9 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_customary_time_class[CUSTOMARY_TIME^]
 [.xcode]
-* link:/releases/PROC/{proc_release}/task_planning.html#_dataset_spec_class[DATASET_SPEC^]
+* link:/releases/PROC/{proc_release}/task_planning.html#_dataset_commit_group_class[DATASET_COMMIT_GROUP^]
 [.xcode]
-* link:/releases/PROC/{proc_release}/task_planning.html#_dataspec_commit_group_class[DATASPEC_COMMIT_GROUP^]
+* link:/releases/PROC/{proc_release}/task_planning.html#_dataset_spec_class[DATASET_SPEC^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_decision_branch_class[DECISION_BRANCH^]
 [.xcode]
