--- a/docs/UML/classes/capture_dataset_spec.adoc
+++ b/docs/UML/classes/capture_dataset_spec.adoc
@@ -11,4 +11,11 @@ h|*Description*
 h|*Inherit*
 2+|`DATASET_SPEC`
 
+h|*Attributes*
+^h|*Signature*
+^h|*Meaning*
+
+h|*0..1*
+|*commit_group*: `DATASET_COMMIT_GROUP`
+a|
 |===
