--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -7,10 +7,11 @@
 4+^h|*PROC Release 2.0.0 (unreleased)*
 
 |[[latest_issue]]1.5.1
-|{spec_tickets}/SPECPROC-33[SPECPROC-33^]. Support progressive data set creation.
+|{spec_tickets}/SPECPROC-33[SPECPROC-33^]. Support progressive data set creation. +
+ {spec_tickets}/SPECPROC-39[SPECPROC-39^]. Correct error in `TASK_LIFECYCLE` state enumeration.
 |M Kejžar, +
  T Beale
-|[[latest_issue_date]]06 May 2020
+|[[latest_issue_date]]13 May 2020
 
 4+^h|*PROC Release 1.5.0*
 
