--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -8,7 +8,7 @@
 
 |[[latest_issue]]1.5.1
 |{spec_tickets}/SPECPROC-33[SPECPROC-33^]. Support progressive data set creation. +
- {spec_tickets}/SPECPROC-39[SPECPROC-39^]. Correct error in `TASK_LIFECYCLE` state enumeration.
+ {spec_tickets}/SPECPROC-39[SPECPROC-39^]. Correct error in `TASK_LIFECYCLE` state enumeration: remove `resumed` state; also correct mentions of `aborted` state to `abandoned`.
 |M Kejžar, +
  T Beale
 |[[latest_issue_date]]13 May 2020
